# tp4-note-quentin-guillaume-louis

./: .gitignore  Point2D.h  README.md
TP4/: CMakeLists.txt  Carte.cpp  Carte.h  Constructible.h  Parcelle.cpp  Parcelle.h  Point2D.cpp  Point2D.h  PolyTests.cpp  Polygone.h  TP4.cpp  TP4.sln  TP4.vcxproj  TP4.vcxproj.filters  UpgradeLog.htm  ZA.h  ZAU.h  ZN.h  ZU.h  main.cpp  utility.cpp  utility.h
compte-rendu/: compte-rendu-TP4.md
compte-rendu/DRAWIO/: algo_calcul_surface.drawio  algo_detection_token.drawio
